product_docs/docs/mysql_data_adapter/2.7.0/04_installing_the_mysql_data_adapter.mdx
---
title: "Installing the MySQL Foreign Data Wrapper"
---

<div id="installing_the_mysql_data_adapter" class="registered_link"></div>



<div id="using_an_rpm_package_to_install_the_data_adapter" class="registered_link"></div>

## Installing on Linux x86-64 (amd64)  

You can install the MySQL Foreign Data Wrapper on the following operating systems:

-   [RHEL 8](#rhel8)
-   [RHEL 7](#rhel7)
-   [Rocky Linux/AlmaLinux 8](#centos8)
-   [CentOS 7](#centos7)
-   [SLES 15](#on-sles-15-x86_64)
-   [SLES 12](#on-sles-12-x86_64)
-   [Ubuntu/Debian](#on-debianubuntu-x86_64)



<div id="rhel8" class="registered_link"></div>

### On RHEL 8 x86_64

Before installing the MySQL Foreign Data Wrapper, you must install the following prerequisite packages, and request credentials from EDB:

Install the `epel-release` package:

```text
dnf -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
```

Enable the `codeready-builder-for-rhel-8-\*-rpms` repository:

```text
ARCH=$( /bin/arch )
subscription-manager repos --enable "codeready-builder-for-rhel-8-${ARCH}-rpms"
```

You must also have credentials that allow access to the EDB repository. For information about requesting credentials, visit:

<https://www.enterprisedb.com/user/login>

After receiving your repository credentials you can:

1.  Create the repository configuration file.
2.  Modify the file, providing your user name and password.
3.  Install the MySQL Foreign Data Wrapper.

**Creating a Repository Configuration File**

To create the repository configuration file, assume superuser privileges, and invoke the following command:

```text
dnf -y https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
```

The repository configuration file is named `edb.repo`. The file resides in `/etc/yum.repos.d`.

**Modifying the file, providing your user name and password**

After creating the `edb.repo` file, use your choice of editor to ensure that the value of the `enabled` parameter is `1`, and replace the `username` and `password` placeholders in the `baseurl` specification with the name and password of a registered EDB user.

```text
[edb]
name=EnterpriseDB RPMs $releasever - $basearch
baseurl=https://<username>:<password>@yum.enterprisedb.com/edb/redhat/rhel-$releasever-$basearch
enabled=1
gpgcheck=1
repo_gpgcheck=1
gpgkey=file:///etc/pki/rpm-gpg/ENTERPRISEDB-GPG-KEY
```
**Installing MySQL Foreign Data Wrapper**

After saving your changes to the configuration file, use the below command to install the MySQL Foreign Data Wrapper:

```text
dnf install edb-as<xx>-mysql8_fdw
```
Where `xx` is the server version number i.e. 13.

When you install an RPM package that is signed by a source that is not recognized by your system, yum may ask for your permission to import the key to your local server. If prompted, and you are satisfied that the packages come from a trustworthy source, enter `y`, and press `Return` to continue.

During the installation, yum may encounter a dependency that it cannot resolve. If it does, it will provide a list of the required dependencies that you must manually resolve.

<div id="rhel7" class="registered_link"></div>

### On RHEL 7 x86_64

Before installing the MySQL Foreign Data Wrapper, you must install the following prerequisite packages, and request credentials from EDB:

Install the `epel-release` package:

```text
yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
```

Enable the optional, extras, and HA repositories:

```text
subscription-manager repos --enable "rhel-*-optional-rpms" --enable "rhel-*-extras-rpms"  --enable "rhel-ha-for-rhel-*-server-rpms"
```

You must also have credentials that allow access to the EDB repository. For information about requesting credentials, visit:

<https://info.enterprisedb.com/rs/069-ALB-339/images/Repository%20Access%2004-09-2019.pdf>

After receiving your repository credentials you can:

1.  Create the repository configuration file.
2.  Modify the file, providing your user name and password.
3.  Install the MySQL Foreign Data Wrapper.

**Creating a Repository Configuration File**

To create the repository configuration file, assume superuser privileges, and invoke the following command:

```text
yum -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
```

The repository configuration file is named `edb.repo`. The file resides in `/etc/yum.repos.d`.

**Modifying the file, providing your user name and password**

After creating the `edb.repo` file, use your choice of editor to ensure that the value of the `enabled` parameter is `1`, and replace the `username` and `password` placeholders in the `baseurl` specification with the name and password of a registered EDB user.

```text
[edb]
name=EnterpriseDB RPMs $releasever - $basearch
baseurl=https://<username>:<password>@yum.enterprisedb.com/edb/redhat/rhel-$releasever-$basearch
enabled=1
gpgcheck=1
repo_gpgcheck=1
gpgkey=file:///etc/pki/rpm-gpg/ENTERPRISEDB-GPG-KEY
```

**Installing MySQL Foreign Data Wrapper**

1. Before installing MySQL FDW, download and install the MySQL repo using the following commands:
 
   ```text
   yum -y install https://dev.mysql.com/get/mysql80-community-release-el7-3.noarch.rpm
   ```

2. Use the following command to enable the appropriate subrepository and install the MySQL Foreign data Wrapper:
 - For MySQL 8:
   ```text
   yum -y install --enablerepo=mysql80-community --disablerepo=mysql57-community edb-as<xx>-mysql8_fdw
   ```
 - For MySQL 5: 
   ```text
   yum -y install --enablerepo=mysql57-community --disablerepo=mysql80-community edb-as<xx>-mysql5_fdw
   ```
Where `xx` is the server version number i.e. 13.

When you install an RPM package that is signed by a source that is not recognized by your system, yum may ask for your permission to import the key to your local server. If prompted, and you are satisfied that the packages come from a trustworthy source, enter `y`, and press `Return` to continue.

During the installation, yum may encounter a dependency that it cannot resolve. If it does, it will provide a list of the required dependencies that you must manually resolve.





<div id="centos8" class="registered_link"></div>

### On Rocky Linux/AlmaLinux 8 x86_64

Before installing the MySQL Foreign Data Wrapper, you must install the following prerequisite packages, and request credentials from EDB:

Install the `epel-release` package:

```text
dnf -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
```

Enable the `PowerTools` repository:

```text
dnf config-manager --set-enabled PowerTools
```

You must also have credentials that allow access to the EDB repository. For information about requesting credentials, visit:

<https://info.enterprisedb.com/rs/069-ALB-339/images/Repository%20Access%2004-09-2019.pdf>

After receiving your repository credentials you can:

1.  Create the repository configuration file.
2.  Modify the file, providing your user name and password.
3.  Install the MySQL Foreign Data Wrapper.

**Creating a Repository Configuration File**

To create the repository configuration file, assume superuser privileges, and invoke the following command:

```text
dnf -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
```

The repository configuration file is named `edb.repo`. The file resides in `/etc/yum.repos.d`.

**Modifying the file, providing your user name and password**

After creating the `edb.repo` file, use your choice of editor to ensure that the value of the `enabled` parameter is `1`, and replace the `username` and `password` placeholders in the `baseurl` specification with the name and password of a registered EDB user.

```text
[edb]
name=EnterpriseDB RPMs $releasever - $basearch
baseurl=https://<username>:<password>@yum.enterprisedb.com/edb/redhat/rhel-$releasever-$basearch
enabled=1
gpgcheck=1
repo_gpgcheck=1
gpgkey=file:///etc/pki/rpm-gpg/ENTERPRISEDB-GPG-KEY
```

**Installing MySQL Foreign Data Wrapper**

After saving your changes to the configuration file, use the following command to install the MySQL Foreign Data Wrapper:

```text
dnf install edb-as<xx>-mysql8_fdw
```
Where `xx` is the server version number i.e. 13.

When you install an RPM package that is signed by a source that is not recognized by your system, yum may ask for your permission to import the key to your local server. If prompted, and you are satisfied that the packages come from a trustworthy source, enter `y`, and press `Return` to continue.

During the installation, yum may encounter a dependency that it cannot resolve. If it does, it will provide a list of the required dependencies that you must manually resolve.

<div id="centos7" class="registered_link"></div>

### On CentOS 7 x86_64

Before installing the MySQL Foreign Data Wrapper, you must install the following prerequisite packages, and request credentials from EDB:

Install the `epel-release` package:

```text
yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
```

!!! Note
    You may need to enable the `[extras]` repository definition in the `CentOS-Base.repo` file (located in `/etc/yum.repos.d`).

You must also have credentials that allow access to the EDB repository. For information about requesting credentials, visit:

<https://info.enterprisedb.com/rs/069-ALB-339/images/Repository%20Access%2004-09-2019.pdf>

After receiving your repository credentials you can:

1.  Create the repository configuration file.
2.  Modify the file, providing your user name and password.
3.  Install the MySQL Foreign Data Wrapper.

**Creating a Repository Configuration File**

To create the repository configuration file, assume superuser privileges, and invoke the following command:

```text
yum -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
```

The repository configuration file is named `edb.repo`. The file resides in `/etc/yum.repos.d`.

**Modifying the file, providing your user name and password**

After creating the `edb.repo` file, use your choice of editor to ensure that the value of the `enabled` parameter is `1`, and replace the `username` and `password` placeholders in the `baseurl` specification with the name and password of a registered EDB user.

```text
[edb]
name=EnterpriseDB RPMs $releasever - $basearch
baseurl=https://<username>:<password>@yum.enterprisedb.com/edb/redhat/rhel-$releasever-$basearch
enabled=1
gpgcheck=1
repo_gpgcheck=1
gpgkey=file:///etc/pki/rpm-gpg/ENTERPRISEDB-GPG-KEY
```

**Installing MySQL Foreign Data Wrapper**

1. Before installing MySQL FDW, download and install the MySQL repo using the following commands:
   ```text
   yum -y install https://dev.mysql.com/get/mysql80-community-release-el7-3.noarch.rpm
   ```
2. Use the following command to enable the appropriate subrepository and install the MySQL Foreign data Wrapper:
 - For MySQL 8:
   ```text
   yum -y install --enablerepo=mysql80-community --disablerepo=mysql57-community edb-as<xx>-mysql8_fdw
   ```
 - For MySQL 5: 
   ```text
   yum -y install --enablerepo=mysql57-community --disablerepo=mysql80-community edb-as<xx>-mysql5_fdw
   ```
Where `xx` is the server version number i.e. 13.

When you install an RPM package that is signed by a source that is not recognized by your system, yum may ask for your permission to import the key to your local server. If prompted, and you are satisfied that the packages come from a trustworthy source, enter `y`, and press `Return` to continue.

During the installation, yum may encounter a dependency that it cannot resolve. If it does, it will provide a list of the required dependencies that you must manually resolve.


### On SLES 15 x86_64 


There are two steps to completing an installation:

- Setting up the repository
- Installing the package

For each step, you must be logged in as superuser.

```shell
# To log in as a superuser:
sudo su -
```

Before setting up the repository, you need to register with EDB. To receive credentials for the EDB repository, visit: [Repository Access Request](https://www.enterprisedb.com/repository-access-request).

#### Setting up the Repository

Setting up the repository is a one time task. If you have already set up your repository, you do not need to perform these steps.

```shell
# Install the repository configuration and enter your EDB repository 
# credentials when prompted
zypper addrepo https://zypp.enterprisedb.com/suse/edb-sles.repo

# Install SUSEConnect to register the host with SUSE, allowing access to 
# SUSE repositories
zypper install SUSEConnect

# Register the host with SUSE, allowing access to SUSE repositories
# Replace 'REGISTRATION_CODE' and 'EMAIL' with your SUSE registration 
# information
SUSEConnect -r 'REGISTRATION_CODE' -e 'EMAIL'

# Activate the required SUSE module
SUSEConnect -p PackageHub/15.3/x86_64

# Install the community MySQL repository
rpm -i https://dev.mysql.com/get/mysql80-community-release-sl15-5.noarch.rpm
rpm --import /etc/RPM-GPG-KEY-mysql-2022

# Refresh the metadata
zypper refresh
```

#### Installing the Package

```shell
zypper -n install edb-as13-mysql8_fdw
```

### On SLES 12 x86_64 


There are two steps to completing an installation:

- Setting up the repository
- Installing the package

For each step, you must be logged in as superuser.

```shell
# To log in as a superuser:
sudo su -
```

Before setting up the repository, you need to register with EDB. To receive credentials for the EDB repository, visit: [Repository Access Request](https://www.enterprisedb.com/repository-access-request).

#### Setting up the Repository

Setting up the repository is a one time task. If you have already set up your repository, you do not need to perform these steps.

```shell
# Install the repository configuration and enter your EDB repository 
# credentials when prompted
zypper addrepo https://zypp.enterprisedb.com/suse/edb-sles.repo

# Install SUSEConnect to register the host with SUSE, allowing access to 
# SUSE repositories
zypper install SUSEConnect

# Register the host with SUSE, allowing access to SUSE repositories
# Replace 'REGISTRATION_CODE' and 'EMAIL' with your SUSE registration 
# information
SUSEConnect -r 'REGISTRATION_CODE' -e 'EMAIL'

# Install the MySQL community repository
wget https://dev.mysql.com/get/mysql80-community-release-sles12-5.noarch.rpm
rpm --import /etc/RPM-GPG-KEY-mysql-2022

# Use one of the following commands to enable the appropriate 
# subrepository and install the MySQL Foreign data Wrapper:
#
# For MySQL8, enable the MySQL8 repository and disable the MySQL5 
# repository
zypper modifyrepo -d mysql57-community
zypper modifyrepo -e mysql80-community
#
# For MySQL5, enable the MySQL5 repository and disable the MySQL8 
# repository
zypper modifyrepo -d mysql80-community
zypper modifyrepo -e mysql57-community

# Activate the required SUSE modules
SUSEConnect -p PackageHub/12.5/x86_64
SUSEConnect -p sle-sdk/12.5/x86_64

# Refresh the metadata
zypper refresh
```

#### Installing the Package

```shell
zypper -n install edb-as14-mysql8_fdw
```


### On Debian/Ubuntu x86_64

To install the MySQL Foreign Data Wrapper on a Debian or Ubuntu host, you must have credentials that allow access to the EDB repository. To request credentials for the repository, visit the [EDB website](https://www.enterprisedb.com/repository-access-request/).

The following steps will walk you through on using the EDB apt repository to install a DEB package. When using the commands, replace the `username` and `password` with the credentials provided by EDB.

1.  Assume superuser privileges:
   ```text
   sudo su –
   ```

2.  Configure the EnterpriseDB repository:

    On Debian 9:

    ```text
    sh -c 'echo "deb https://username:password@apt.enterprisedb.com/$(lsb_release -cs)-edb/ $(lsb_release -cs) main" > /etc/apt/sources.list.d/edb-$(lsb_release -cs).list'
    ```

    On Debian 10, Ubuntu 18, and Ubuntu 20:

    1.  Set up the EDB repository:

    ```text
    sh -c 'echo "deb [arch=amd64] https://apt.enterprisedb.com/$(lsb_release -cs)-edb/ $(lsb_release -cs) main" > /etc/apt/sources.list.d/edb-$(lsb_release -cs).list'
    ```

    2.  Substitute your EDB credentials for the `username` and `password` in the following command:

    ```text
    sh -c 'echo "machine apt.enterprisedb.com login <username> password <password>" > /etc/apt/auth.conf.d/edb.conf'
    ```

3.  Add support to your system for secure APT repositories:

   ```text
   apt-get install apt-transport-https
   ```

4.  Add the EBD signing key:

   ```text
   wget -q -O - https://username:password@apt.enterprisedb.com/edb-deb.gpg.key | apt-key add -
   ```
5. If there is `libmysqlclient-dev` already installed on your system, remove it by using the following command:
   ```text
   sudo apt-get remove  libmysqlclient-dev
   ```

6. Enable the MySQL repo by using the apporpriate command:
- For Debian 9:
    - For MySQL 8: 
    ```text
    sudo echo "deb http://repo.mysql.com/apt/debian/stretch mysql-8.0" | sudo tee  /etc/apt/sources.list.d/mysql.list
    ```
    - For MySQL 5: 
    ```text
    sudo echo "deb http://repo.mysql.com/apt/debian/stretch mysql-5.7" | sudo tee  /etc/apt/sources.list.d/mysql.list
    ```

- For Debian 10:
    - For MySQL 8: 
    ```text
    sudo echo "deb http://repo.mysql.com/apt/debian/buster mysql-8.0" | sudo tee  /etc/apt/sources.list.d/mysql.list
    ```
    - For MySQL 5: 
    ```text
    sudo echo "deb http://repo.mysql.com/apt/debian/buster mysql-5.7" | sudo tee  /etc/apt/sources.list.d/mysql.list
    ```

- For Ubuntu 18:
    - For MySQL 8: 
    ```text
    sudo echo "deb http://repo.mysql.com/apt/ubuntu/bionic mysql-8.0" | sudo tee  /etc/apt/sources.list.d/mysql.list
    ```
    - For MySQL 5: 
    ```text
    sudo echo "deb http://repo.mysql.com/apt/ubuntu/bionic mysql-5.7" | sudo tee /etc/apt/sources.list.d/mysql.list
    ```
  Note that you do not need to enable the MySQL repo on Ubuntu 20.

7.  Add the mysql repo key using the following commands:

   ```text
   sudo apt-key adv --keyserver pgp.mit.edu --recv-keys 5072E1F5
   ```
8. Update the repository metadata:

   ```text
   apt-get update
   ```

9.  Install DEB package:

   ```text
   apt-get install edb-as<xx>-mysql<y>-fdw
   ```
  Where `xx` is the server version number i.e. 13 and `y` is the MySQL version i.e. 5 or 8.

## Installing on IBM Power (ppc64le)

You can install the Hadoop Foreign Data Wrapper on the following operating systems on IBM Power (ppc64le):

 - [RHEL 8](#on-rhel-8-1)
 - [RHEL 7](#centos7_PPCLE)
 - [SLES 15](#on-sles-15-ppc64le)
 - [SLES 12](#on-sles-12-ppc64le)

### On RHEL 8 ppc64le
There are two steps to completing an installation:

- Setting up the repository
- Installing the package

For each step, you must be logged in as superuser.

To log in as a superuser:

```shell
sudo su -
```

#### Setting up the Repository

1. To register with EDB to receive credentials for the EDB repository, visit: [Repository Access Request](https://www.enterprisedb.com/repository-access-request).

1. Set up the EDB repository:

   ```shell
   dnf -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
   ```

   This creates the /etc/yum.repos.d/edb.repo configuration file.

1. Add your EDB credentials to the edb.repo file:  

   ```shell
   sed -i "s@<username>:<password>@USERNAME:PASSWORD@" /etc/yum.repos.d/edb.repo
   ```

   Where `USERNAME:PASSWORD` is the username and password available from your
   [EDB account](https://www.enterprisedb.com/user).

1. Install the EPEL repository and refresh the cache:

   ```shell
   dnf -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
   dnf makecache
   ```

1. Enable the codeready-builder-for-rhel-8-\*-rpms repository since EPEL packages may depend on packages from it:

   ```shell
   ARCH=$( /bin/arch )
   subscription-manager repos --enable "codeready-builder-for-rhel-8-${ARCH}-rpms"
   ```

1. Disable the built-in PostgreSQL module:
   ```shell
   dnf -qy module disable postgresql
   ```

#### Installing the Package

```shell
dnf -y install edb-as<xx>-mysql8_fdw
```

where `xx` is the server version number.





<div id="rhel_centos7_PPCLE" class="registered_link"></div>

### On RHEL 7 ppc64le

1.  Use the following command to create a configuration file and install Advance Toolchain:

    ```text
    rpm --import https://public.dhe.ibm.com/software/server/POWER/Linux/toolchain/at/redhat/RHEL7/gpg-pubkey-6976a827-5164221b
    cat > /etc/yum.repos.d/advance-toolchain.repo <<EOF
    # Begin of configuration file
    [advance-toolchain]
    name=Advance Toolchain IBM FTP
    baseurl=https://public.dhe.ibm.com/software/server/POWER/Linux/toolchain/at/redhat/RHEL7
    failovermethod=priority
    enabled=1
    gpgcheck=1
    gpgkey=ftp://public.dhe.ibm.com/software/server/POWER/Linux/toolchain/at/redhat/RHELX/gpg-pubkey-6976a827-5164221b
    # End of configuration file
    EOF
    ```

2.  Install the EDB repository:

    ```text
    yum -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

3.  Replace ‘USERNAME:PASSWORD’ below with your username and password for the EDB repositories:

    ```text
    sed -i "s@<username>:<password>@USERNAME:PASSWORD@" /etc/yum.repos.d/edb.repo
    ```

4.  Install the EPEL repository:

    ```text
    yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
    ```

5.  On RHEL 7 ppc64le, enable the additional repositories to resolve EPEL dependencies:

    ```text
    subscription-manager repos --enable "rhel-*-optional-rpms" --enable "rhel-*-extras-rpms"  --enable "rhel-ha-for-rhel-*-server-rpms"
    ```

6.  Install the selected package:

    ```text
    dnf install edb-as<xx>-mongo_fdw
    ```

    where `xx` is the server version number.

<div id="centos7_PPCLE" class="registered_link"></div>

### On RHEL 7 ppc64le

Before installing the MySQL Foreign Data Wrapper, you must install the following prerequisite packages, and request credentials from EDB:
1. Use the following commands to install Advance Toolchain:
```text
rpm --import https://public.dhe.ibm.com/software/server/POWER/Linux/toolchain/at/redhat/RHEL7/gpg-pubkey-6976a827-5164221b

cat > /etc/yum.repos.d/advance-toolchain.repo <<EOF
# Begin of configuration file
[advance-toolchain]
name=Advance Toolchain IBM FTP
baseurl=https://public.dhe.ibm.com/software/server/POWER/Linux/toolchain/at/redhat/RHEL7
failovermethod=priority
enabled=1
gpgcheck=1
repo_gpgcheck=1
gpgkey=ftp://public.dhe.ibm.com/software/server/POWER/Linux/toolchain/at/redhat/RHELX/gpg-pubkey-6976a827-5164221b
# End of
```

2. Install the `epel-release` package:

```text
yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
```

!!! Note
    You may need to enable the `[extras]` repository definition in the `CentOS-Base.repo` file (located in `/etc/yum.repos.d`).

You must also have credentials that allow access to the EDB repository. For information about requesting credentials, visit:

 <https://info.enterprisedb.com/rs/069-ALB-339/images/Repository%20Access%2004-09-2019.pdf>

After receiving your repository credentials you can:

1.  Create the repository configuration file.
2.  Modify the file, providing your user name and password.
3.  Install the MySQL Foreign Data Wrapper.

**Creating a Repository Configuration File**

To create the repository configuration file, assume superuser privileges, and invoke the following command:

```text
yum -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
```

The repository configuration file is named `edb.repo`. The file resides in `/etc/yum.repos.d`.

**Modifying the file, providing your user name and password**

After creating the `edb.repo` file, use your choice of editor to ensure that the value of the `enabled` parameter is `1`, and replace the `username` and `password` placeholders in the `baseurl` specification with the name and password of a registered EDB user.

```text
[edb]
name=EnterpriseDB RPMs $releasever - $basearch
baseurl=https://<username>:<password>@yum.enterprisedb.com/edb/redhat/rhel-$releasever-$basearch
enabled=1
gpgcheck=1
repo_gpgcheck=1
gpgkey=file:///etc/pki/rpm-gpg/ENTERPRISEDB-GPG-KEY
```

**Installing MySQL Foreign Data Wrapper**

Use the following command to install the MySQL Foreign Data Wrapper:
  ```text
   yum install edb-as<xx>-mysql5_fdw
   ```
where `xx` is the server version number i.e. 13. 

!!! Note
    MySQL 8.0 RPMs are not available for CentOS 7 ppc64le platform.

When you install an RPM package that is signed by a source that is not recognized by your system, yum may ask for your permission to import the key to your local server. If prompted, and you are satisfied that the packages come from a trustworthy source, enter `y`, and press `Return` to continue.

During the installation, yum may encounter a dependency that it cannot resolve. If it does, it will provide a list of the required dependencies that you must manually resolve.

### On SLES 15 ppc64le


There are two steps to completing an installation:

- Setting up the repository
- Installing the package


For each step, you must be logged in as superuser.

```shell
# To log in as a superuser:
sudo su -
```

Before setting up the repository, you need to register with EDB. To receive credentials for the EDB repository, visit: [Repository Access Request](https://www.enterprisedb.com/repository-access-request).

#### Setting up the Repository

Setting up the repository is a one time task. If you have already set up your repository, you do not need to perform these steps.

```shell
# Install the repository configuration and enter your EDB repository 
# credentials when prompted
zypper addrepo https://zypp.enterprisedb.com/suse/edb-sles.repo

# Install SUSEConnect to register the host with SUSE, allowing access to 
# SUSE repositories
zypper install SUSEConnect

# Register the host with SUSE, allowing access to SUSE repositories
# Replace 'REGISTRATION_CODE' and 'EMAIL' with your SUSE registration 
# information
SUSEConnect -r 'REGISTRATION_CODE' -e 'EMAIL'

# Activate the required SUSE module
SUSEConnect -p PackageHub/15.3/ppc64le

# Install the community MySQL repository
rpm -i https://dev.mysql.com/get/mysql80-community-release-sl15-5.noarch.rpm
rpm --import /etc/RPM-GPG-KEY-mysql-2022

# Refresh the metadata
zypper refresh
```

#### Installing the Package

```shell
zypper -n install edb-as13-mysql8_fdw
```

### On SLES 12 ppc64le


There are two steps to completing an installation:

- Setting up the repository
- Installing the package


For each step, you must be logged in as superuser.

```shell
# To log in as a superuser:
sudo su -
```

Before setting up the repository, you need to register with EDB. To receive credentials for the EDB repository, visit: [Repository Access Request](https://www.enterprisedb.com/repository-access-request).

#### Setting up the Repository

Setting up the repository is a one time task. If you have already set up your repository, you do not need to perform these steps.

```shell
# Install the repository configuration and enter your EDB repository 
# credentials when prompted
zypper addrepo https://zypp.enterprisedb.com/suse/edb-sles.repo

# Install SUSEConnect to register the host with SUSE, allowing access to 
# SUSE repositories
zypper install SUSEConnect

# Register the host with SUSE, allowing access to SUSE repositories
# Replace 'REGISTRATION_CODE' and 'EMAIL' with your SUSE registration 
# information
SUSEConnect -r 'REGISTRATION_CODE' -e 'EMAIL'

# Activate the required SUSE modules
SUSEConnect -p PackageHub/12.5/ppc64le
SUSEConnect -p sle-sdk/12.5/ppc64le

# Refresh the metadata
zypper refresh
```

#### Installing the Package

```shell
zypper -n install edb-as14-mysql8_fdw
```

